# t5os

./: .bochsrc  .clang-format  .clang-tidy  .clangd  .dockerignore  .editorconfig  .gdbinit  .gitignore  .ignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  kernel.cpp  linker.ld  loader.s  meson.build  meson.i686-elf.ini  meson.options
arch/: meson.build
arch/x86/: meson.build
arch/x86/include/arch/: cpu.h  gdt.h  port.h
arch/x86/include/arch/32/: idt.h
arch/x86/src/: cpu.c
arch/x86/src/32/: gdt.c  idt.c  isr.c
arch/x86/src/devices/: serial.c
kernel/: kassert.c  kassert.h  kpanic.c  kpanic.h  meson.build
kernel/arch/generic/: cpu_ops.h
kernel/arch/generic/include/kernel/arch/generic/: cpu_ops.h
kernel/arch/x86/: cpu.c  meson.build  port.c
kernel/arch/x86/32/: gdt.c  idt.c
kernel/arch/x86/devices/: vga.c  vga.h
kernel/arch/x86/include/kernel/arch/: cpu.h
kernel/arch/x86/include/kernel/arch/32/: idt.h
kernel/arch/x86/src/: cpu.c  port.c
kernel/arch/x86/src/32/: gdt.c  idt.c  isr.c  linker.ld
kernel/arch/x86/src/devices/: serial.c  vga.c
kernel/arch/x86_32/: gdt.c  idt.c  idt.h  isr.c  meson.build
kernel/arch/x86_32/include/kernel/arch/x86_32/: idt.h  iframe.h
kernel/arch/x86_32/src/: gdt.c  idt.c  isr.c
kernel/arch/x86_shared/: cpu.c  meson.build  port.c
kernel/arch/x86_shared/devices/: serial.c  vga.c
kernel/arch/x86_shared/include/kernel/arch/x86_shared/: cpu_ops.h  gdt.h
kernel/arch/x86_shared/src/: cpu.c  port.c
kernel/arch/x86_shared/src/devices/: serial.c  vga.c
kernel/include/kernel/: log.h
kernel/include/kernel/arch/generic/: cpu.h  cpu_ops.h
kernel/include/kernel/arch/x86/: cpu.h  gdt.h
kernel/include/kernel/arch/x86/32/: idt.h  isr.h
kernel/include/kernel/arch/x86/devices/: vga.h
kernel/kernel/: kassert.c  kernel.c  kpanic.c  meson.build
kernel/kernel/include/kernel/: kassert.h  kpanic.h
kernel/kernel/src/: kassert.c  kernel.c  kpanic.c
kernel/src/: kassert.c  kernel.c  kpanic.c  meson.build
kernel/src/arch/: meson.build
kernel/src/arch/x86/: cpu.c  meson.build
kernel/src/arch/x86/32/: boot.S  gdt.S  gdt.c  idt.c  isr.c
kernel/src/arch/x86/devices/: serial.c  vga.c
kernel/src/log/: log.c  test_log_debug.c
kernel/test/: meson.build
kernel/test/log/: test_log_debug.c
lib/wyoos/: datatypes.hpp  integers.hpp  platform.hpp
libt5/: meson.build
libt5/include/libt5/: log.h
libt5/src/: log.c  meson.build
libt5/test/: log.c  log.test.c  meson.build
libt5/test/log/: log_trace.c  test_log_common.h  test_log_trace_formatted_strings.c  test_log_trace_simple_strings.c
meson/cross/: i686-elf.ini
scripts/: docker-build-image.sh  docker-build-toolchain.sh  docker-make-iso.sh  docker-make-toolchain.sh
src/drivers/: keyboard.cpp  keyboard.hpp  vga.cpp  vga.hpp
src/kernel/: kassert.cpp  kassert.h  kassert.hpp  kernel.c  kernel.cpp  kpanic.c  kpanic.cpp  kpanic.h  kpanic.hpp  loader.S  loader.asm  stringify.h
src/kernel/arch/: cpu.h  integers.hpp  platform.hpp
src/kernel/arch/generic/: init.h
src/kernel/arch/i386/: gdt.cpp  gdt.hpp
src/kernel/arch/x86/: arch_cpu_init.c  cpu.c  descriptor_table.h  descriptor_table.hpp  gdt.S  gdt.c  gdt.cpp  gdt.h  gdt.hpp  idt.S  idt.c  idt.h  init.c  init.h  interrupts.S  interrupts.c  interrupts.cpp  interrupts.h  interrupts.hpp  isr.S  isr.c  isr.h  port.c  port.cpp  port.hpp  ports.c  ports.h
src/kernel/arch/x86/32/: boot.S  gdt.S  gdt.c  gdt.h  idt.c  idt.h  isr.S  isr.c  isr.h  linker.ld
src/kernel/arch/x86/32/interrupts/: isr.c
src/kernel/arch/x86/devices/: serial.c  serial.h  vga.c  vga.h
src/kernel/arch/x86/i686/: boot.S  linker.ld
src/kernel/platform/: platform.hpp
src/kernel/platform/x86/: gdt.cpp  gdt.hpp  interrupts.S  interrupts.cpp  interrupts.hpp  port.cpp  port.hpp
src/kernel/platform/x86/i386/: linker.ld
src/lib/: constants.hpp  core.hpp  integers.hpp  semantics.hpp
src/libcore/: string_view.h  stringify.h
subprojects/: boxfort.wrap  criterion.wrap  debugbreak.wrap  klib.wrap  libgit2-cmake.wrap  nanomsg-cmake.wrap  nanopb-cmake.wrap
toolchain/: build-cross-tools.sh  build.sh
