test_libt5_src_dict = {
    'log_trace SHOULD correctly output formatted strings': {
        'exe_name': 'test_log_trace_formatted_strings',
        'sources': files('log/test_log_trace_formatted_strings.c'),
        'include_dirs': include_directories('../include', 'log'),
    },
    'log_trace SHOULD correctly output simple strings': {
        'exe_name': 'test_log_trace_simple_strings',
        'sources': files('log/test_log_trace_simple_strings.c'),
        'include_dirs': include_directories('../include', 'log'),
    },
}
